      created as the header is parsed; the results are not actually
      needed until the entire message has been read. (The Mail::DKIM
      module does not yet do the queries asynchrously; this is just
      the infrastructure so that the queries can be asynchronous in
      the future.)

  * bugfixes:
    * DNS lookup overrides alarm() signal (issue #2854325)


Version 0.37 - released 2009-09-08

  * New/changed functionality:
    * ADSP records now check whether the domain itself exists, in
      accordance to the ADSP specification

  * bugfixes:
    * fixed regexp used to detect header field names (issue #2803465)
    * various fixes to ADSP checking


Version 0.36 - released 2009-06-02

  * API changes:
    * restore the as_string() method which was accidentally removed
      in version 0.34


Version 0.35 - released 2009-05-22

  * bugfixes:
    * fixed a runaway regular expression in the canonicalization
      routines (patch provided by Mark Martinec)


Version 0.34 - released 2009-05-20

  * New/changed functionality:
    * support for ADSP (author-domain-signing-practices) records
    * removed support for pre-standardized DKIM signatures (i.e. these
      are DKIM signatures without a v= or bh= tag).
    * DNS resolver errors are detected and reported as such

  * API changes:
    * renamed Mail::DKIM::Policy to Mail::DKIM::DkPolicy. Programs using
      the former name to create policy objects directly (though it would
      be more expected to fetch the objects through
      Mail::DKIM::Verifier) should update their code
    * new policies() method in Mail::DKIM::Verifier for fetching all
      applicable sender/author signing policies

  * bugfixes:
    * Signer object would die if first line of input wasn't a header
      (rt.cpan.org issue #46179)


Version 0.33 - released 2009-03-10

  * bugfixes:
    * signature wrapping would sometimes cause improper preparation of
      DKIM signatures, with "simple" canonicalization (issue #2257046)